kubernetes/services/transmission.yml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9091
  selector:
    app: transmission

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
spec:
  tls:
    - hosts:
        - transmission.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: transmission.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: default
  labels:
    app: transmission
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: vpn
          image: qmcgaw/gluetun
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
        - name: app
          image: lscr.io/linuxserver/transmission:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 9091
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
      volumes:
        - name: downloads
          hostPath:
            path: /storage/jellyfin/media/Downloads
        - name: config
          hostPath:
            path: /storage/transmission/config
